# libmuslim

./: .gitignore  CMakeLists.txt  README.md  android.sh  main.c  prayertimes.h  test_timezone.c  timezone.h
src/: prayertimes.c
